Clean up spacing and ensure type consistency

--- a/src/keenanpayne/components/_intro-text.scss
+++ b/src/keenanpayne/components/_intro-text.scss
@@ -13,9 +13,11 @@
 }
 
 .introtext-text {
+  letter-spacing: -.01rem;
   font-size: typeScale(6);
 
   @media (--medium) {
+    letter-spacing: -.025rem;
     font-size: typeScale(8);
   }
 }
